# DoG-Filter

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
include/: filePath.h  shader.h  texture.h
include/glad/: glad.h
shaders/: DoG.frag  ETF.frag  GradientAlignedGaussian1D.frag  GreyScale.frag  LineIntegralConvolution.frag  SSTGaussian.frag  Threshold.frag  basic.frag  basic.vert  etfblur.frag  gradalignblur.frag  lic.frag
src/: glad.c  main.cpp  shader.cpp  texture.cpp
